corrections, toasters toujours invisibles et date minimale du calendrier pas fait

--- a/src/main/resources/public/resources/css/style.css
+++ b/src/main/resources/public/resources/css/style.css
@@ -905,6 +905,10 @@ md-toast {
 	}
 }
 
+#hidden {
+	display : none;
+}
+
 #tranches-ages {
-	margin-right: 5%;
+	margin-bottom: -5%;
 }
